# Emergency-agentic

./: .env  agents.py  conversation_logs.txt  main.py  pyproject.toml  requirments.txt
Unit_Testing/: ai_response.raw  play_audio.py  test_flow.py
pipeline/: agents.py  chat_UI.py  main.py
